--- a/supermercados.html
+++ b/supermercados.html
@@ -175,12 +175,33 @@
                       <p class="card-text">
                           </p><ul>
                             <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/tipao.cashandcarry/"> Facebook</a></li>
-                              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/TRyvCQSCiMvzjndw7"> Mangualde</a></li>
+                              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/TRyvCQSCiMvzjndw7"> Chãs de Tavares</a></li>
                               <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                                   <ul> 
                                       <li><b>Seg-Dom:</b> 9h - 20h</li>
                                   </ul>
                               </li>
+                          </ul>
+                      <p></p>
+                    </div>
+                  </div>
+                </div>
+<!--Animais & Companhia-->
+                <div class="col-md-4 mb-5">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h3 class="card-title">Animais & Companhia</h3>
+                      <p class="card-text">
+                          </p><ul>
+                            <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232188399"> 232188399</a></li>
+                            <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/pg/Animais-Companhia-Frutas-Companhia-cal%C3%A7ado-Companhia-106188793117878/about/"> Facebook</a></li>
+                              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/jrE5YLpoKn7oFLbY8"> Mangualde</a></li>
+                              <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                  <ul> 
+                                      <li><b>Seg-Sex:</b> 8h - 19h30m</li>
+                                  </ul>
+                              </li>
+                              <li><b>Entregas ao domicílio</b></li>
                           </ul>
                       <p></p>
                     </div>
@@ -324,6 +345,26 @@
                 </div>
               </div>
             </div>
+
+              <!--Cooperativa Agrícola de Mangualde-->
+              <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                  <div class="card-body">
+                    <h3 class="card-title">Cooperativa Agrícola de Mangualde</h3>
+                    <p class="card-text">
+                        </p><ul>
+                            <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/66dv6NBS4fmUWVLF8"> Moimenta de Maceira Dão</a></li>
+                            <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                <ul> 
+                                    <li><b>Seg-Sex:</b> 8h - 12h / 13h - 17h</li>
+                                    <li><b>Sáb:</b> 9h - 13h </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    <p></p>
+                  </div>
+                </div>
+              </div>
 <!--Fim da row-->
  </div>
 </div>
