--- a/farmacias.html
+++ b/farmacias.html
@@ -50,31 +50,29 @@
           <p class="text-white m-0" style="font-size: 40px; margin-top: 20px;padding:10px;">Farmácias <i class="fas fa-clinic-medical" aria-hidden="true"></i></p>
       </div>
       </div>
-      <h2 style="font-weight: bold; text-align: center;">Farmácias de Serviço</h2>
+ <h2 style="font-weight: bold; text-align: center;">Farmácias de Serviço</h2>
       <div class="justify-content-center align-items-center row" >
-        <div class="row w-100">
         <!--Farmácia de Serviço-->
      <!--Farmácia Albuquerque-->
- <!--Farmácia Espinho Petrucci-->
-      <div class="col-md-4 mb-5">
-        <div class="card h-100">
-          <div class="card-body">
-            <h3 class="card-title">Farmácia Espinho Petrucci</h3>
-            <p class="card-text">
-                </p><ul>
-                  <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232622240"> 232622240</a></li>
-                  <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/FarmaciaEspinhoPetrucci/"> Facebook</a></li>
-                    <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/W5KYGHKMnvCutCRm6"> Mangualde</a></li>
-                    <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
-                        <ul> 
+     <div class="row w-100">
+     <div class="col-md-6 mb-5">
+      <div class="card h-100">
+        <div class="card-body">
+          <h3 class="card-title">Farmácia Albuquerque</h3>
+          <p class="card-text">
+              </p><ul>
+                <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232611952"> 232611952</a></li>
+                <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/pages/category/Pharmacy---Drugstore/Farm%C3%A1cia-Albuquerque-468025329935643/"> Facebook</a></li>
+                  <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/nwQSvem81ATRpbQQ9"> Mangualde</a></li>
+                  <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                      <ul> 
                           <li><b>Seg-Sex:</b> 8h30m - 20h</li>
-                          <li><b>Sáb:</b> 8h30m - 19h</li>
-                        </ul>
-                    </li>
-                </ul>
-            <p></p>
-          </div>
+                          <li><b>Sáb:</b> 8h30m - 19h</li> 
+                      </ul>
+                  </li>
+              </ul>
         </div>
+      </div>
     </div>
       <!--Farmácia Beirão (serviço)-->
       <div class="col-md-6 mb-5">
@@ -95,11 +93,11 @@
             <p></p>
           </div>
         </div>
+       
     </div>
      
     <!--Fim da row-->
-      </div></div> 
-      <h6 style="text-align: center;"><b>Atualizado a 03/04/2020 10:00</b></h6>
+      </div></div> <h6 style="text-align: center;"><b>Atualizado a 02/04/2020 10:00</b></h6>
       <!--Farmácias Mangualde-->
       <h2 style="font-weight: bold;">Mangualde</h2>
       <hr>
