--- a/servicos.html
+++ b/servicos.html
@@ -374,6 +374,57 @@
                     </div>
                   </div>
                 </div>
+<!--Galp Mangualde-->
+  <div class="col-md-4 mb-5">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h3 class="card-title">Galp Mangualde </h3>
+                          </p><ul>
+                              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/6E54UXaUivspxSSx9"> Mangualde</a></li>
+                              <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                  <ul> 
+                                     <li><b>Sem Informação</b> </li>
+                                  </ul>
+                              </li>
+                          </ul>
+                      <p></p>
+                    </div>
+                  </div>
+                </div>
+<!--Repsol Mangualde-->
+  <div class="col-md-4 mb-5">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h3 class="card-title">Repsol Mangualde </h3>
+                          </p><ul>
+                              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/BfTvzojcXsVdjSNb6"> Mangualde</a></li>
+                              <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                  <ul> 
+                                     <li><b>Sem Informação</b> </li>
+                                  </ul>
+                              </li>
+                          </ul>
+                      <p></p>
+                    </div>
+                  </div>
+                </div>
+<!--Prio - Quintela de Azurara-->
+  <div class="col-md-4 mb-5">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h3 class="card-title">Prio - Quintela de Azurara </h3>
+                          </p><ul>
+                              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/3B45zhcYsn6Kahh27"> Quintela de Azurara</a></li>
+                              <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                  <ul> 
+                                     <li><b>Sem Informação</b> </li>
+                                  </ul>
+                              </li>
+                          </ul>
+                      <p></p>
+                    </div>
+                  </div>
+                </div>
 <!--Fim da row-->
  </div>
 <h2 style="font-weight: bold;">Óticas</h2>
@@ -403,7 +454,7 @@
  <h2 style="font-weight: bold;">Ervanárias</h2>
  <hr>
  <div class="row" style="font-size: 16px;">
-                <!--MultiÓpticas-->
+                <!--Ervanária Mãe Natureza-->
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
                       <div class="card-body">
