--- a/supermercados.html
+++ b/supermercados.html
@@ -248,6 +248,29 @@
     </div>
   </div>
 </div>
+
+               <!--Jóia da Beira-->
+               <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                  <div class="card-body">
+                    <h3 class="card-title">Jóia da Beira</h3>
+                    <p class="card-text">
+                        </p><ul>
+                          <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232622391"> 232622391</a></li>
+                          <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:927084234"> 927084234</a></li>
+                          <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/A-J%C3%B3ia-da-Beira-LDA-1880959365353531/"> Facebook</a></li>
+                            <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/WBBPQCKy3pjX7WRV8"> Mangualde</a></li>
+                            <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                <ul> 
+                                    <li><b>Seg-Sex:</b> 9h - 12h30m / 14h - 18h</li>
+                                    <li><b>Sáb:</b> 9h - 13h</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    <p></p>
+                  </div>
+                </div>
+              </div>
           <!--Fim da row-->
 </div>
 <!--Talhos-->
