--- a/farmacias.html
+++ b/farmacias.html
@@ -39,6 +39,9 @@
             <li class="nav-item ">
               <a class="nav-link" href="info.html">Contacto</a>
             </li>
+            <li class="nav-item active bg-danger" style="border-radius:7px;">
+              <a class="nav-link"  href="voluntario.html">Ser Voluntário</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -50,13 +53,14 @@
           <p class="text-white m-0" style="font-size: 40px; margin-top: 20px;padding:10px;">Farmácias <i class="fas fa-clinic-medical" aria-hidden="true"></i></p>
       </div>
       </div>
- <h2 style="font-weight: bold; text-align: center;">Farmácias de Serviço</h2>
+      <h2 style="font-weight: bold; text-align: center;">Farmácias de Serviço</h2>
       <div class="justify-content-center align-items-center row" >
- <div class="row w-100">
-        <!--Farmácia de Serviço-->
+          <div class="row w-100">
+          <!--Farmácia de Serviço-->
      <!--Farmácia Albuquerque-->
-   <!--Farmácia Espinho Petrucci-->
-      <div class="col-md-6 mb-5">
+   
+       <!--Farmácia Espinho Petrucci-->
+       <div class="col-md-6 mb-5">
         <div class="card h-100">
           <div class="card-body">
             <h3 class="card-title">Farmácia Espinho Petrucci</h3>
@@ -94,12 +98,12 @@
                 </ul>
             <p></p>
           </div>
-        </div> 
+        </div>
+       
     </div>
+     
     <!--Fim da row-->
-      </div>
-      </div> 
-      <h6 style="text-align: center;"><b>Atualizado a 03/04/2020 10:00</b></h6>
+      </div></div> <h6 style="text-align: center;"><b>Atualizado a 03/04/2020 10:00</b></h6>
       <!--Farmácias Mangualde-->
       <h2 style="font-weight: bold;">Mangualde</h2>
       <hr>
