--- a/restaurantes.html
+++ b/restaurantes.html
@@ -39,6 +39,9 @@
             <li class="nav-item ">
               <a class="nav-link" href="info.html">Contacto</a>
             </li>
+            <li class="nav-item active bg-danger" style="border-radius:7px;">
+              <a class="nav-link"  href="voluntario.html">Ser Voluntário</a>
+            </li>
   
           </ul>
         </div>
