--- a/index.html
+++ b/index.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
- <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162389133-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-162389133-1');
-</script>
-
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Website de apoio à comunidade de Mangualde durante a quarentena devido ao vírus COVID-19">
@@ -18,7 +8,6 @@
 <title>COVID-19 Mangualde</title>
 <link rel="icon" type="imagem/png" href="stay-home.png">
 <link rel="stylesheet" href="bootstrap.min.css">
- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -48,6 +37,9 @@
               <li class="nav-item ">
                 <a class="nav-link" href="info.html">Contacto</a>
               </li>
+              <li class="nav-item active bg-danger" style="border-radius:7px;">
+                <a class="nav-link"  href="voluntario.html">Ser Voluntário</a>
+              </li>
     
             </ul>
           </div>
@@ -62,14 +54,14 @@
   </div>
   -->
       <div class="container" style="margin-top: 90px;">
-<img class="image" src="mangualde.jpg" style="margin-bottom:20px; width:100%;">
+<img class="image" src="mangualde.jpg" style="margin-bottom:20px; width:100%; ">
     
 <div class=" justify-content-center align-items-center row">
   <div class="col-md-12 mb-5">
     <div class="card h-100">
       <div class="card-body bg-danger">
         <h4 class="card-title" style="font-weight: bold; color:#ffffff; text-align: center;">Número de casos no Concelho de Mangualde <i class="fas fa-clinic-medical" aria-hidden="true"></i></h4>
-        <p class="card-text" style="text-align: center; color:#ffffff; font-size:30px;"><b>2 </b></p>
+        <p class="card-text" style="text-align: center; color:#ffffff; font-size:30px;"><b>2</b></p>
       </div>
     </div>
   </div>
