--- a/voluntario.html
+++ b/voluntario.html
@@ -36,12 +36,12 @@
             <li class="nav-item">
               <a class="nav-link" href="servicos.html">Serviços</a>
             </li>
-            <li class="nav-item active ">
+            <li class="nav-item">
               <a class="nav-link" href="info.html">Contacto</a>
             </li>
             <li class="nav-item active bg-danger" style="border-radius:7px;">
-              <a class="nav-link"  href="voluntario.html">Ser Voluntário</a>
-            </li>
+                <a class="nav-link"  href="voluntario.html">Ser Voluntário</a>
+              </li>
           </ul>
         </div>
       </div>
@@ -50,7 +50,7 @@
     <div class="container"  style="margin-top:90px;">
       <div class="card text-white bg-danger  my-5 py-4 text-center">
         <div class="card-body"  style="padding:3px;">
-          <p class="text-white m-0" style="font-size: 40px; margin-top: 20px;padding:10px;">Contacto <i class="fas fa-info-circle" aria-hidden="true"></i></p>
+          <p class="text-white m-0" style="font-size: 40px; margin-top: 20px;padding:10px;">Ser Voluntário <i class="fas fa-user" aria-hidden="true"></i></p>
       </div>
       </div>
       <div class="row" style="font-size: 16px;">
@@ -58,17 +58,25 @@
         <div class="col-md-12 mb-5">
           <div class="card h-100">
             <div class="card-body">
-              <h3 class="card-title">Contacto</h3>
+              <h3 class="card-title">Ser Voluntário</h3>
               <p class="card-text">
-                  Esta página foi criada com o intuito de informar a população de Mangualde sobre todos os serviços disponíveis no Concelho, bem como os seus horários, contactos e localização.
+                  A plataforma <b>Estamos juntas/os – Linha de Apoio Social ao Voluntariado</b> foi lançada pela Câmara Municipal de Mangualde com o intuito de criar uma bolsa de voluntários para apoiar quem mais precisa!
                   </p>
-                <p>Caso queira adicionar um serviço / detetou um erro, contacte-me pelos seguintes meios</p>
+                <p><b>Os voluntários deverão ter as seguintes características: </b></p>
+                        <ul>
+                            <li> <b>Maior de 18 anos e inferior a 50 anos</b></li>
+                            <li> Capacidade <b>Empática</b></li>
+                            <li> <b>Responsável</b></li>
+                            <li> <b>Comunicativo</b></li>
+                            <li> Capacidade de <b>Iniciativa</b></li>
+                            <li> Capacidade de <b>trabalhar em equipa</b></li>
+                            <li> Disponibilidade para exercer no <b>mínimo 4 horas semanais</b></li>
+                            <li> <b>Não pertencer a um grupo de risco</b></li>
+                        </ul>
                 <ul>
-                    <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/pedro.costa.37051579"> Facebook</a></li>
-                      <li><i class="fas fa-at" aria-hidden="true"></i> <a href="mailto:pedromacosta99@gmail.com"> pedromacosta99@gmail.com</a></li>
-                    <li><i class="fas fa-globe" aria-hidden="true"></i><a href="https://forms.gle/xZLj4apWTjMwQqch7"> Formulário </a></li>
+                    <li><i class="fas fa-globe" aria-hidden="true"></i><a href="https://docs.google.com/forms/d/e/1FAIpQLScrdoGMlLf57-JpCy0a_-A0TsqftgJUKRF32NnrpRom5O7fGA/viewform"> <b>Sê Voluntário</b> </a></li>
                     </ul>
-
+                    <p><b>Fonte: </b><i>Câmara Municipal de Mangualde</i></p>
               <p></p>
             </div>
           </div>
