--- a/voluntario.html
+++ b/voluntario.html
@@ -54,7 +54,7 @@
       </div>
       </div>
       <div class="row" style="font-size: 16px;">
-        <!--Farmácia Feliz-->
+        <!--Ser Voluntário-->
         <div class="col-md-12 mb-5">
           <div class="card h-100">
             <div class="card-body">
@@ -72,6 +72,7 @@
                             <li> Capacidade de <b>trabalhar em equipa</b></li>
                             <li> Disponibilidade para exercer no <b>mínimo 4 horas semanais</b></li>
                             <li> <b>Não pertencer a um grupo de risco</b></li>
+                          <p><li><b>Os voluntários têm direito a receber apoio no enquadramento, seguro de voluntário e equipamento individual de proteção</b></li></p>
                         </ul>
                 <ul>
                     <li><i class="fas fa-globe" aria-hidden="true"></i><a href="https://docs.google.com/forms/d/e/1FAIpQLScrdoGMlLf57-JpCy0a_-A0TsqftgJUKRF32NnrpRom5O7fGA/viewform"> <b>Sê Voluntário</b> </a></li>
