--- a/servicos.html
+++ b/servicos.html
@@ -98,6 +98,25 @@
           </div>
         </div>
       </div>
+          <!--USF de Mangualde-->
+          <div class="col-md-4 mb-5">
+            <div class="card h-100">
+              <div class="card-body">
+                <h3 class="card-title">USF de Mangualde</h3>
+                <p class="card-text">
+                    </p><ul>
+                      <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232619485"> 232619485 </a></li>
+                        <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/8Z7hC5KAtfY5RHF66"> Mangualde</a></li>
+                        <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                            <ul> 
+                               <li><b>Seg-Sex:</b> 8h - 20h</li>
+                            </ul>
+                        </li>
+                    </ul>
+                <p></p>
+              </div>
+            </div>
+          </div>
             <!--BVM-->
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
